manifests/gitea/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      containers:
      - name: gitea
        image: docker.io/gitea/gitea:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 22
          name: ssh
        volumeMounts:
        - name: gitea-data
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: http
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 3
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-data
